--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="LeComerci - The best platform for free and paid commerce notes.">
+    <meta name="description" content="LeComerce - The best platform for free and paid commerce notes.">
     <meta name="keywords" content="Commerce Notes, Business Studies, Accounting, Economics, LeComerci">
-    <meta name="author" content="LeComerci">
-    <title>LeComerci - Free & Paid Commerce Notes</title>
+    <meta name="author" content="LeComerce">
+    <title>LeComerce - Free & Paid Commerce Notes</title>
     <link rel="stylesheet" href="style.css">
     <style>
         body {
