--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description" content="LeComerce - The best platform for free and paid commerce notes.">
-    <meta name="keywords" content="Commerce Notes, Business Studies, Accounting, Economics, LeComerci">
+    <meta name="keywords" content="Commerce Notes, Business Studies, Accounting, Economics, LeComerce">
     <meta name="author" content="LeComerce">
     <title>LeComerce - Free & Paid Commerce Notes</title>
     <link rel="stylesheet" href="style.css">
@@ -51,8 +51,8 @@
 </head>
 <body>
     <header>
-        <img src="lodo.png.webp" alt="LeComerci Logo" width="120">
-        <h1>LeComerci</h1>  
+        <img src="lecomerce-logo.png" alt="LeComerce Logo" width="200">
+        <h1>LeComerce</h1>  
         <nav>
             <ul>
                 <li><a href="#about">About</a></li>
@@ -94,7 +94,7 @@
     </section>
     
     <footer>
-        <p>&copy; 2025 LeComerci. All Rights Reserved.</p>
+        <p>&copy; 2025 LeComerce. All Rights Reserved.</p>
     </footer>
     
     <script>
