--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
 </head>
 <body>
     <header>
-        <img src="lecomerce-lodo.png.webp" alt="LeComerce Logo" width="200">
+        <img src="lodo.png.webp" alt="LeComerce Logo" width="200">
         <h1>LeComerce</h1>  
         <nav>
             <ul>
