--- a/index.html
+++ b/index.html
@@ -71,7 +71,11 @@
     <section id="services">
         <h2>Our Services</h2>
         <ul>
-            <li>Service 1 - <a href="pdfs/sample1.pdf" target="_blank">Download PDF</a></li>
+            <li>Download PDFs:
+                <ul>
+                    <li><a href="Class_11_Accounting_Chapter_1_Notes.pdf" target="_blank">Class 11 Accounting Chapter 1 Notes</a></li>
+                </ul>
+            </li>
             <li>Service 2 - <a href="https://www.youtube.com/watch?v=example" target="_blank">Watch Explanation Video</a></li>
             <li>Service 3</li>
         </ul>
