--- a/index.html
+++ b/index.html
@@ -3,11 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="LeComerce - The best platform for free and paid commerce notes.">
-    <meta name="keywords" content="Commerce Notes, Business Studies, Accounting, Economics, LeComerce">
+    <meta name="description" content="LeComerce - The best platform for free and paid commerce notes. Get study materials, PDF downloads, and business resources.">
+    <meta name="keywords" content="Commerce Notes, Business Studies, Accounting, Economics, LeComerce, Free Commerce PDFs, Study Material">
     <meta name="author" content="LeComerce">
+    <meta name="robots" content="index, follow">
+    <meta property="og:title" content="LeComerce - Free & Paid Commerce Notes">
+    <meta property="og:description" content="Get high-quality commerce study materials, PDFs, and video lessons at LeComerce.">
+    <meta property="og:url" content="https://yourwebsite.com">
+    <meta property="og:type" content="website">
     <title>LeComerce - Free & Paid Commerce Notes</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
     <style>
         body {
             background: linear-gradient(to bottom, #1E3A8A, #FFFFFF);
@@ -104,8 +110,7 @@
         <p>Stay updated with the latest commerce notes and resources.</p>
         <a href="https://t.me/your_telegram_channel" target="_blank" style="font-size: 18px; color: #1E3A8A; text-decoration: none; font-weight: bold;">Join Now</a>
     </section>
-    
-</footer>
+    </footer>
     
     <script>
         document.querySelector("form").addEventListener("submit", function(event) {
