--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
         <p>We are a company dedicated to providing the best services.</p>
         <p>The Free and Paid Notes for Every Commerce Subject.
         That Includes - Class- 11 all accounts chapter notes 
-        And Economucs & Bussiness Studies Notes .</p>
+        And Economics & Bussiness Studies Notes .</p>
     </section>
     
     <section id="services">
