--- a/index.html
+++ b/index.html
@@ -71,9 +71,7 @@
     <section id="about">
         <h2>About Us</h2>
         <p>We are a company dedicated to providing the best services.</p>
-        <p>The Free and Paid Notes for Every Commerce Subject.
-        That Includes - Class- 11 all accounts chapter notes 
-        And Economics & Bussiness Studies Notes .</p>
+        <p>The Free and Paid Notes for Every Commerce Subject.</p>
     </section>
     
     <section id="services">
