--- a/index.html
+++ b/index.html
@@ -54,6 +54,7 @@
             width: 100%;
         }
     </style>
+    <link rel="sitemap" type="application/xml" title="Sitemap" href="sitemap.xml">
 </head>
 <body>
     <header>
@@ -71,6 +72,7 @@
     <section id="about">
         <h2>About Us</h2>
         <p>We are a company dedicated to providing the best services.</p>
+        <p><strong><em>✨ That includes: Class 11 all <span style='color:#1E3A8A;'>Accounts</span> notes and <span style='color:#1E3A8A;'>Business Studies</span> and <span style='color:#1E3A8A;'>Economics</span> notes. ✨</em></strong></p>
         <p>The Free and Paid Notes for Every Commerce Subject.</p>
     </section>
     
@@ -79,7 +81,16 @@
         <ul>
             <li>Download PDFs:
                 <ul>
-                    <li><a href="Class_11_Accounting_Chapter_1_Notes.pdf" target="_blank">Class 11 Accounting Chapter 1 Notes</a></li>
+                    <li>✔️ <strong>Free Content:</strong>
+                        <ul>
+                            <li><a href="Class_11_Accounting_Chapter_1_Notes.pdf" target="_blank">Class 11 Accounting Chapter 1 Notes</a></li>
+                        </ul>
+                    </li>
+                    <li>🔒 <strong>Paid Content:</strong>
+                        <ul>
+                            <li><a href="#" target="_blank">Premium Commerce Study Guide</a></li>
+                        </ul>
+                    </li>
                 </ul>
             </li>
             <li>Service 2 - <a href="https://www.youtube.com/watch?v=example" target="_blank">Watch Explanation Video</a></li>
