--- a/index.html
+++ b/index.html
@@ -79,23 +79,23 @@
     <section id="services">
         <h2>Our Services</h2>
         <ul>
-            <li>Download PDFs:
+            <li>📥 <strong>Download PDFs:</strong>
                 <ul>
-                    <li>✔️ <strong>Free Content:</strong>
+                    <li>✅ <strong>Free Content:</strong>
                         <ul>
                             <li><a href="Class_11_Accounting_Chapter_1_Notes.pdf" target="_blank">Class 11 Accounting Chapter 1 Notes</a></li>
+                            <li><a href="Presentation 6.pdf" target="_blank">Class 11 Accounts Ch-1 All Important Notes</a></li>
                         </ul>
                     </li>
-                    <li>🔒 <strong>Paid Content:</strong>
+                    <li>💰 <strong>Paid Content:</strong>
                         <ul>
                             <li><a href="#" target="_blank">Premium Commerce Study Guide</a></li>
                         </ul>
                     </li>
                 </ul>
             </li>
-            <li>Service 2 - <a href="https://youtube.com/@all_comerce_contents?si=IQ1-wtbujEwH3ZF5" target="_blank">Watch Explanation Video</a></li>
-            <li>Service 3 - <a href="https://t.me/+j4UFQAciF5RhY2Q1" target="_blank">Join Our Telegram Channel</a></li>
-            
+            <li>📺 <strong>Service 2 - </strong><a href="https://youtube.com/@all_comerce_contents?si=IQ1-wtbujEwH3ZF5" target="_blank">Watch Explanation Video</a></li>
+            <li>📢 <strong>Service 3 - </strong><a href="https://t.me/+j4UFQAciF5RhY2Q1" target="_blank">Join Our Telegram Channel</a></li>
         </ul>
     </section>
     
